# 0.00.17 (62294) Mar 7, 2012
3/7/12 Concentration: new color scheme from JC
3/7/12 restore wavelength control
3/7/12 cleanup uses of ChangeObserver (used mainly to rewire view components to mutable model properties)
# 0.00.16 (62265) Mar 6, 2012
3/6/12 dev version with Color Scheme Editor
3/6/12 update view when color scheme changes (everything except precipitate that already exists)
3/6/12 user interface completed for color scheme editor (not everything is updating properly yet, since colors were never intended to be mutable)
3/6/12 Concentration: add color schemes to model, stub button for opening editor
3/6/12 reorganize class for dev model properties, rename ConcentrationModelDialog
3/6/12 remove all photons on Reset All
3/6/12 center ruler under cuvette
3/6/12 tweak size and velocity of photons, use image caching to improve performance
3/6/12 put a gray outline around the beam, so that lighter colors are still visible
3/6/12 add ruler insets to model, start with ruler aligned with left edge of cuvette
3/6/12 change label "% Transmittance" to "Transmittance" on detector
3/5/12 first pass at photon beam (model and view), does not interact with solution or detector
3/5/12 rename Beam to SolidBeam
3/2/12 Beers: make solutions more transparent so that it's easier to see probe inside solution
3/2/12 setPickable(false) on cuvette components, so that probe can be manipulated when it's inside the cuvette
3/2/12 make entire probe look like it's passing through the cuvette
# 0.00.15 (62131) Mar 2, 2012
3/2/12 first pass at making probe look like it's passing through the cuvette (half in, half out)
3/2/12 sim-sharing: add non-interactive message for detector body
3/2/12 sim-sharing: indicate whether probe is in beam when dragging probe
3/2/12 Beers: add transparency to solution in cuvette, so that detector will be visible as it passes through
3/2/12 move probe/beam intersection tests to beam model
3/2/12 Beers: make detector work inside cuvette