@@ -4,13 +4,10 @@ concentration.name=Concentration
 
 absorbance=Absorbance
 concentration=Concentration
-beam=beam
 evaporation=Evaporation
 lambdaMax=<html>\u03bb<sub>max</sub></html>
-lightView=Light view
 lots=lots
 none=none
-photons=photons
 removeSolute=Remove Solute
 saturated=Saturated!
 solid=Solid
