@@ -1,3 +1,4 @@
+3/7/12 delete "photon view" feature, representation can't handle the range
 # 0.00.17 (62294) Mar 7, 2012
 3/7/12 Concentration: new color scheme from JC
 3/7/12 restore wavelength control
